PumaTX_RC/PumaTX_RC03/Compiling error.txt


sketch\Right gimbal.cpp:1:1: error: 'MLX' does not name a type

 MLX.begin();

 ^

sketch\Right gimbal.cpp:2:1: error: 'Throttle' does not name a type

 Throttle = MLX.Throttle();

 ^

sketch\Right gimbal.cpp:3:1: error: 'Yaw' does not name a type

 Yaw = MLX.Yaw();

 ^

sketch\Right gimbal.cpp:4:1: error: 'Pitch' does not name a type

 Pitch = MLX.Pitch();

 ^

sketch\Right gimbal.cpp:5:1: error: 'Roll' does not name a type

 Roll = MLX.Roll();

 ^

Plusieurs bibliothèque trouvées pour "WiFi.h"
Utilisé : C:\Users\Nicolas DG\AppData\Local\Arduino15\packages\esp32\hardware\esp32\1.0.3-rc1\libraries\WiFi
Non utilisé : C:\Program Files (x86)\Arduino\libraries\Stock_WiFi
exit status 1
sketch\MLX.cpp: In member function 'int MLX::getThrottle()':

MLX.cpp:191:9: error: 'Throttle' was not declared in this scope

  return Throttle;

         ^

sketch\MLX.cpp: In member function 'int MLX::getYaw()':

MLX.cpp:196:9: error: 'Yaw' was not declared in this scope

  return Yaw;

         ^

sketch\MLX.cpp: In member function 'int MLX::getPitch()':

MLX.cpp:201:9: error: 'Pitch' was not declared in this scope

  return Pitch;

         ^

sketch\MLX.cpp: In member function 'int MLX::getRoll()':

MLX.cpp:206:9: error: 'Roll' was not declared in this scope

  return Roll;

         ^

PumaTX_RC03:67:1: error: expected ';' after struct definition

 }

 ^

PumaTX_RC03:72:1: error: expected ';' after struct definition

 }

 ^

PumaTX_RC03:88:1: error: expected unqualified-id before '--' token

 -------------------------------------------------SCREEN--------------------------------------------------

 ^

C:\Users\Nicolas DG\Desktop\PumaTX\PumaTX_RC\PumaTX_RC03\PumaTX_RC03.ino: In function 'void setup()':

PumaTX_RC03:167:14: error: cannot call member function 'void MLX::begin()' without object

   MLX::begin();

              ^

PumaTX_RC03:179:59: error: 'FALSE' was not declared in this scope

 Channel Throttle = {0, 0, 0, 0, 0, 992, 1, 2, 3, 0, 0, 0, FALSE};

                                                           ^

C:\Users\Nicolas DG\Desktop\PumaTX\PumaTX_RC\PumaTX_RC03\PumaTX_RC03.ino: In function 'void loop()':

PumaTX_RC03:315:14: error: cannot call member function 'void MLX::process()' without object

 MLX::process();

              ^

PumaTX_RC03:395:3: error: 'u8g' was not declared in this scope

   u8g.firstPage();  

   ^

PumaTX_RC03:414:7: error: expected initializer before '.' token

 int Ok.State = digitalRead(Ok.Pin);

       ^

PumaTX_RC03:415:10: error: expected initializer before '.' token

 int Right.State = digitalRead(Right.Pin);

          ^

PumaTX_RC03:416:9: error: expected initializer before '.' token

 int Left.State = digitalRead(Left.Pin);

         ^

PumaTX_RC03:417:7: error: expected initializer before '.' token

 int Up.State = digitalRead(Up.Pin);

       ^

PumaTX_RC03:418:9: error: expected initializer before '.' token

 int Down.State = digitalRead(Down.Pin);

         ^

PumaTX_RC03:437:6: error: 'Ok' was not declared in this scope

  if (Ok.State == HIGH || calibrate == 1) {

      ^

PumaTX_RC03:444:5: error: 'Throttle' was not declared in this scope

     Throttle.Trim = Throttle.MLX;  

     ^

PumaTX_RC03:445:5: error: 'Yaw' was not declared in this scope

     Yaw.Trim = Yaw.MLX;

     ^

PumaTX_RC03:446:5: error: 'Pitch' was not declared in this scope

     Pitch.Trim = Pitch.MLX;

     ^

PumaTX_RC03:447:5: error: 'Roll' was not declared in this scope

     Roll.Trim = Roll.MLX;  

     ^

PumaTX_RC03:450:24: error: 'maxthrottle' was not declared in this scope

     if (Throttle.MLX > maxthrottle){

                        ^

PumaTX_RC03:505:8: error: request for member 'State' in 'OK', which is of non-class type 'STATUS'

 if (OK.State == LOW){

        ^

PumaTX_RC03:514:5: error: 'Throttle' was not declared in this scope

 if (Throttle.MLX <= Throttle.Trim) {    //------------------------------Throttle

     ^

PumaTX_RC03:517:25: error: 'trimthrottle' was not declared in this scope

 else if (Throttle.MLX > trimthrottle) {

                         ^

PumaTX_RC03:521:5: error: 'Yaw' was not declared in this scope

 if (Yaw.MLX <= Yaw.Trim) {    //------------------------------yaw

     ^

PumaTX_RC03:527:1: error: 'Yaw' was not declared in this scope

 Yaw.Output = - Yaw.Outout; //reverse yaw output

 ^

PumaTX_RC03:529:5: error: 'Pitch' was not declared in this scope

 if (Pitch.MLX <= Pitch.Trim {    //------------------------------pitch

     ^

PumaTX_RC03:529:29: error: expected ')' before '{' token

 if (Pitch.MLX <= Pitch.Trim {    //------------------------------pitch

                             ^

PumaTX_RC03:545:1: error: 'Throttle' was not declared in this scope

 Throttle.Output = constrain(Throttle.Output, -100, 100);

 ^

PumaTX_RC03:547:1: error: 'Roll' was not declared in this scope

 Roll.Output = constrain(Roll.Output, -100, 100);

 ^

PumaTX_RC03:552:5: error: 'Right' was not declared in this scope

 if (Right.State == LOW && page < MaxPage) { //menu right -> page+

     ^

PumaTX_RC03:557:5: error: 'Left' was not declared in this scope

 if (Left.State == LOW && page > 0){ //menu left -> page-

     ^

PumaTX_RC03:564:3: error: 'Voltage' was not declared in this scope

   Voltage.State = analogRead(Voltage.Pin) * ( 5.00 / 1023.00) / 0.4443;

   ^

C:\Users\Nicolas DG\Desktop\PumaTX\PumaTX_RC\PumaTX_RC03\PumaTX_RC03.ino: In function 'void draw()':

PumaTX_RC03:581:3: error: 'u8g' was not declared in this scope

   u8g.setFont(u8g_font_5x7);

   ^

PumaTX_RC03:595:13: error: 'Throttle' was not declared in this scope

   u8g.print(Throttle.MLX);

             ^

PumaTX_RC03:603:13: error: 'Yaw' was not declared in this scope

   u8g.print(Yaw.MLX);

             ^

PumaTX_RC03:611:13: error: 'Pitch' was not declared in this scope

   u8g.print(Pitch.MLX);

             ^

PumaTX_RC03:619:13: error: 'Roll' was not declared in this scope

   u8g.print(Roll.MLX);

             ^

PumaTX_RC03:628:3: error: 'LeftJoy' was not declared in this scope

   LeftJoy.x = map(Yaw.Output, -100, 100, 8, 56);   

   ^

PumaTX_RC03:628:19: error: 'Yaw' was not declared in this scope

   LeftJoy.x = map(Yaw.Output, -100, 100, 8, 56);   

                   ^

PumaTX_RC03:629:19: error: 'Throttle' was not declared in this scope

   LeftJoy.y = map(Throttle.Output, 100, -100, 8, 56);

                   ^

PumaTX_RC03:635:3: error: 'RightJoy' was not declared in this scope

   RightJoy.x = map(Roll.Output, -100, 100, 72, 120);  

   ^

PumaTX_RC03:635:20: error: 'Roll' was not declared in this scope

   RightJoy.x = map(Roll.Output, -100, 100, 72, 120);  

                    ^

PumaTX_RC03:636:20: error: 'Pitch' was not declared in this scope

   RightJoy.y = map(Pitch.Output, 100, -100, 8, 56);

                    ^

PumaTX_RC03:664:13: error: 'Voltage' was not declared in this scope

   u8g.print(Voltage.State);

             ^

'Throttle' was not declared in this scope